style(GitHubNotice): position notice far off-screen initially to ensure it remains hidden before animation

--- a/src/components/Shared/GitHubNotice/GitHubNotice.module.scss
+++ b/src/components/Shared/GitHubNotice/GitHubNotice.module.scss
@@ -2,7 +2,7 @@
 
 .notice {
   position: fixed;
-  bottom: -120px;
+  bottom: -400px;
   left: 50%;
   translate: -50% 0;
   background-color: #1a202c;
